# BN-Bench

./: .gitignore  README.md  pyproject.toml
networks/: E_commerce_gt.json  alzheimer_gt.json  asia.json  covid_gt.json  flooding_risk_gt.json  hip_fracture_gt.json  road_safety_gt.json  waterborne_gt.json
ratings/human/aquatic_health/: metadata.json  ordering_based_ratings.csv
ratings/human/asia/: edge_based_ratings.csv  metadata.json  ordering_based_ratings.csv
ratings/human/e_commerce/: metadata.json  ordering_based_ratings.csv
ratings/human/hip_fracture/: metadata.json  ordering_based_ratings.csv
ratings/human/student/: metadata.json  ordering_based_ratings.csv
ratings/human/supply_chain/: metadata.json  ordering_based_ratings.csv
ratings/human/waterborne_disease/: metadata.json  ordering_based_ratings.csv
ratings/llm/business_performance/: edge_based_ratings.csv  metadata.json  ordering_based_ratings.csv
ratings/llm/cancer_simultaneous_symptoms/: edge_based_ratings.csv  metadata.json  ordering_based_ratings.csv
ratings/llm/customer_satisfaction/: edge_based_ratings.csv  metadata.json  ordering_based_ratings.csv
ratings/llm/depressive_symptoms/: edge_based_ratings.csv  metadata.json  ordering_based_ratings.csv
ratings/llm/e_commerce/: edge_based_ratings.csv  metadata.json  ordering_based_ratings.csv
ratings/llm/earthquake_risk/: edge_based_ratings.csv  metadata.json  ordering_based_ratings.csv
scripts/: convert_human_xlsx_to_csv.py  convert_llm_docx_to_ratings.py
src/bnbench/: __init__.py  core.py
tests/: test_core.py
(+41 files in other folders)
